[package]
name = "github-labelexim"
version = "0.1.0"
authors = ["Leo <leo881003@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
reqwest = { version = "0.10.4", features = ["json"] }
serde = { version = "1.0.106", features = ["derive"] }
serde_json = "1.0.52"
tokio = { version = "0.2.20", features = ["rt-core", "fs"] }
